--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
         "@commitlint/config-conventional": "^17.1.0",
         "@deriv/api-types": "^1.0.2463",
         "@jest/globals": "^29.7.0",
-        "@rsbuild/core": "^1.0.1-beta.1",
+        "@rsbuild/core": "^1.3.0",
         "@rsbuild/plugin-basic-ssl": "^1.1.1",
         "@rsbuild/plugin-react": "^1.0.1-beta.1",
         "@rsbuild/plugin-sass": "^1.0.1-beta.1",
